--- a/moccasin.toml
+++ b/moccasin.toml
@@ -8,11 +8,14 @@ default_network_name = "eth-forked"
 [networks.contracts]
 weth = { abi = "abis/weth.json" }
 usdc = { abi = "abis/usdc.json" }
+arb = { abi = "abis/arb.json" }
 aavev3_pool_address_provider = { abi = "abis/aavev3_pool_address_provider.json" }
 pool = { abi = "abis/pool.json" }
 aave_protocol_data_provider = { abi = "abis/aave_protocol_data_provider.json" }
 eth_usd = { abi = "abis/eth_usd.json" }
 usdc_usd = { abi = "abis/eth_usd.json" }
+arb_usd = { abi = "abis/eth_usd.json" }
+uniswap-swap-router = { abi = "abis/uniswap_swap_router.json" }
 
 [networks.eth-forked]
 fork = true
@@ -27,6 +30,26 @@ aavev3_pool_address_provider = { address = "0x2f39d218133AFaB8F2B819B1066c7E434A
 aave_protocol_data_provider = { address = "0x41393e5e337606dc3821075Af65AeE84D7688CBD" }
 eth_usd = { address = "0x5f4eC3Df9cbd43714FE2740f5E3616155c5b8419" }
 usdc_usd = { address = "0x8fFfFfd4AfB6115b954Bd326cbe7B4BA576818f6" }
+uniswap-swap-router = { address = "0x68b3465833fb72A70ecDF485E0e4C7bD8665Fc45" }
+
+[networks.arb-forked]
+fork = true
+url = "$ARBITRUM_RPC_URL"
+default_account_name = "anvil0"
+unsafe_password_file = "$ANVIL0_PASSWORD_FILE"
+explorer_uri = 'https://api.arbiscan.io/api'
+explorer_type = 'etherscan'
+explorer_api_key = "$ARBITRUM_API_KEY"
+chain_id = 42161
+
+[networks.arb-forked.contracts]
+usdc = { address = "0xaf88d065e77c8cC2239327C5EDb3A432268e5831" }
+arb = { address = "0x912CE59144191C1204E64559FE8253a0e49E6548" }
+aavev3_pool_address_provider = { address = "0xa97684ead0e402dC232d5A977953DF7ECBaB3CDb" }
+aave_protocol_data_provider = { address = "0x7F23D86Ee20D869112572136221e173428DD740B" }
+arb_usd = { address = "0xb2A824043730FE05F3DA2efaFa1CBbe83fa548D6" }
+usdc_usd = { address = "0x50834F3163758fcC1Df9973b6e91f0F0F0434aD3" }
+uniswap-swap-router = { address = "0x68b3465833fb72A70ecDF485E0e4C7bD8665Fc45" }
 
 
 # You can view all configuration options at https://cyfrin.github.io/moccasin/all_moccasin_toml_parameters.html
